--- a/standard-footer.html
+++ b/standard-footer.html
@@ -35,7 +35,6 @@
               <div class="vs-footer__menu">
                 <ul class="vs-footer__menu--list">
                   <li><a href="/">Accueil</a></li>
-                  <li><a href="about.html">À Propos</a></li>
                   <li><a href="spectacles.html">Spectacles</a></li>
                   <li><a href="gallery.html">Galerie</a></li>
                   <li><a href="partners.html">Partenaires</a></li>
@@ -89,8 +88,8 @@
           </div>
           <div class="col-md-auto">
             <ul class="vs-footer__bottom--menu">
-              <li><a href="about.html">Conditions Générales</a></li>
-              <li><a href="about.html">Politique de Confidentialité</a></li>
+              <li><a href="contact.html">Conditions Générales</a></li>
+              <li><a href="contact.html">Politique de Confidentialité</a></li>
             </ul>
           </div>
         </div>
