--- a/404.html
+++ b/404.html
@@ -162,14 +162,7 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="about.html">
-              À PROPOS
-              <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-              </svg>
-            </a>
             <ul class="sub-menu">
-              <li><a href="about.html">About Us</a></li>
               <li><a href="why-choose-us">Why Choose Us</a></li>
               <li><a href="service-details">Service Details</a></li>
             </ul>
@@ -220,12 +213,6 @@
             </ul>
           </li>
           <li>
-            <a class="vs-svg-assets" href="contact.html">
-              CONTACT
-              <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-              </svg>
-            </a>
           </li>
         </ul>
         <div class="mobile-contact-info" style="padding: 20px; border-top: 1px solid #eee; margin-top: 20px;">
@@ -297,12 +284,6 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="about.html">
-                      À PROPOS
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
                   </li>
                   <li>
                     <a class="vs-svg-assets" href="spectacles.html">
@@ -337,12 +318,6 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="contact.html">
-                      CONTACT
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
                   </li>
                 </ul>
               </nav>
@@ -422,14 +397,7 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="about.html">
-              About
-              <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-              </svg>
-            </a>
             <ul class="sub-menu">
-              <li><a href="about.html">About Us</a></li>
               <li><a href="why-choose-us">Why Choose Us</a></li>
               <li><a href="service-details">Service Details</a></li>
             </ul>
@@ -445,7 +413,6 @@
               <li><a href="javascript:void(0)">Page List 1</a>
                 <ul>
                   <li><a href="/">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
                   <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="service-details">Service Details</a></li>
                   <li><a href="team">Teachers</a></li>
@@ -510,12 +477,6 @@
             </ul>
           </li>
           <li>
-            <a class="vs-svg-assets" href="contact.html">
-              contact
-              <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-              </svg>
-            </a>
           </li>
         </ul>
       </div>
@@ -807,7 +768,7 @@
               <div class="menu-all-pages-container">
                 <ul class="menu">
                   <li><a href="/">Accueil</a></li>
-                  <li><a href="about.html">À propos</a></li>
+                  <li><a href="contact.html">À propos</a></li>
                   <li><a href="spectacles.html">Spectacles</a></li>
                   <li><a href="gallery.html">Galerie</a></li>
                   <li><a href="contact.html">Contact</a></li>
