Enhanced EDJS website visuals and functionality
- Made video bigger and moved left for better positioning
- Replaced all generic spectacle icons with authentic character images from spectacles elements
- Changed guest access button to clean text link
- Applied Asset 9@4x.png background to Notre Vision section and Antigone/Alice spectacle cards
- Updated character icons to use object-fit: contain for proper display
- Enhanced rocket floating animation with smooth vertical movement and subtle rotation
- Added individual login button for particuliers alongside guest access option

All spectacle cards now display proper character representations with consistent styling and improved visual hierarchy.

--- a/index.html
+++ b/index.html
@@ -125,10 +125,16 @@
     /* Rocket Floating Animation */
     @keyframes rocketFloat {
       0%, 100% {
-        transform: translateY(-50%);
+        transform: translateY(-50%) rotate(0deg);
+      }
+      25% {
+        transform: translateY(-60px) rotate(2deg);
       }
       50% {
-        transform: translateY(-90px);
+        transform: translateY(-80px) rotate(0deg);
+      }
+      75% {
+        transform: translateY(-60px) rotate(-2deg);
       }
     }
 
@@ -2134,7 +2140,7 @@
     <!-- Hero End -->
     
     <!-- Values Section -->
-    <section class="py-5" style="background: linear-gradient(135deg, #f8fffe 0%, #e8f5e8 100%);">
+    <section class="py-5" style="background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-lg-8">
@@ -2195,7 +2201,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 mb-30 wow animate__fadeInUp" data-wow-delay="0.25s">
             <div class="vs-about--image">
-              <div class="vs-about--image__figure2 wow animate__fadeInUp" data-wow-delay="0.35s" style="width: 100%; max-width: 800px; height: auto; border-radius: 15px; overflow: hidden; margin-left: -50px;">
+              <div class="vs-about--image__figure2 wow animate__fadeInUp" data-wow-delay="0.35s" style="width: 120%; max-width: 950px; height: auto; border-radius: 15px; overflow: hidden; margin-left: -100px;">
                 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1114999103?h=a1b2c3d4e5&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;title=0&amp;byline=0&amp;portrait=0&amp;controls=1&amp;autoplay=0&amp;muted=0" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="EDJS Video"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
               </div>
               <div class="vs-about--image__ele3 wow animate__zoomIn" data-wow-delay="0.55s" style="background-color: #BDCF00;"></div>
@@ -2617,7 +2623,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color2">
-                        <img src="assets/img/icon edjs-19.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/petit prince@4x.png" alt="Le Petit Prince Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2646,7 +2652,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/tara sur la lune.png" alt="Tara sur la Lune" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color3">
-                        <img src="assets/img/icon edjs-18.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/tara@4x.png" alt="Tara sur la Lune Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2675,7 +2681,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/l'eau la.png" alt="L'eau-là" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color4">
-                        <img src="assets/img/icon edjs-12.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/leau@4x.png" alt="L'eau-là Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2704,7 +2710,7 @@
                       <img class="vs-class__figure--img" src="assets/img/4x/Asset 8@4x.png" alt="Mirath Atfal" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color1">
-                        <img src="assets/img/icon edjs-21.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/estevanico@4x.png" alt="Mirath Atfal Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2733,7 +2739,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/simple.png" alt="Simple comme bonjour" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color2">
-                        <img src="assets/img/icon edjs-07.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/simple comme bonjour@4x.png" alt="Simple comme bonjour Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2762,7 +2768,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color3">
-                        <img src="assets/img/icon edjs-23.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/charlotte@4x.png" alt="Charlotte Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2790,7 +2796,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/estavine.png" alt="Estevanico" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color1">
-                        <img src="assets/img/icon edjs-08.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/estevanico@4x.png" alt="Estevanico Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2819,7 +2825,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/enfant de l'arbre.png" alt="L'enfant de l'arbre" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color2">
-                        <img src="assets/img/icon edjs-14.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/larbre@4x.png" alt="L'enfant de l'arbre Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2845,10 +2851,10 @@
                 <div class="vs-class">
                   <div class="vs-class__figure">
                     <a class="vs-class__figure--link" href="spectacle-antigone.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/antigone.png" alt="Antigone, Sophocle" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
+                      <img class="vs-class__figure--img" src="assets/img/spectacles/antigone.png" alt="Antigone, Sophocle" style="object-fit: contain !important; padding: 10px; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color3">
-                        <img src="assets/img/icon edjs-15.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/antigone@4x.png" alt="Antigone Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
@@ -2874,10 +2880,10 @@
                 <div class="vs-class">
                   <div class="vs-class__figure">
                     <a class="vs-class__figure--link" href="spectacle-alice-chez-les-merveilles.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/alice chez le .png" alt="Alice chez les merveilles" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
+                      <img class="vs-class__figure--img" src="assets/img/spectacles/alice chez le .png" alt="Alice chez les merveilles" style="object-fit: contain !important; padding: 10px; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color4">
-                        <img src="assets/img/icon edjs-25.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/spectacles elements/alice@4x.png" alt="Alice chez les merveilles Character" style="width: 35px; height: 35px; border-radius: 50%; object-fit: contain;">
                       </span>
                       </div>
                     </a>
