--- a/spectacles.html
+++ b/spectacles.html
@@ -1507,10 +1507,13 @@
             <div class="option-content">
               <h3>PARTICULIER</h3>
               <p>Parents, familles, amis, amoureux du théâtre</p>
-              <button class="auth-btn guest-btn" id="guestAccessBtn">
-                <span>Continuer en tant qu'invité</span>
-                <i class="fas fa-arrow-right"></i>
+              <button class="auth-btn login-btn" id="individualLoginBtn">
+                <span>Se connecter</span>
+                <i class="fas fa-user"></i>
               </button>
+              <a href="#" class="guest-link" id="guestAccessBtn" style="color: #666; text-decoration: underline; font-size: 14px; margin-top: 10px; display: inline-block;">
+                Continuer en tant qu'invité
+              </a>
             </div>
           </div>
         </div>
@@ -1632,8 +1635,8 @@
         <!-- Spectacle 1: Le Petit Prince - Octobre 2025 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/petit prince@4x.png" alt="Le Petit Prince Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -1680,8 +1683,8 @@
         <!-- Spectacle 2: Tara sur la Lune - Octobre 2025 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/tara sur la lune.png" alt="Tara sur la Lune" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/tara sur la lune.png" alt="Tara sur la Lune" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/tara@4x.png" alt="Tara Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -1727,8 +1730,8 @@
         <!-- Spectacle 3: L'eau-là - Novembre 2025 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/l'eau la.png" alt="L'eau-là" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/l'eau la.png" alt="L'eau-là" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/leau@4x.png" alt="L'eau-là Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -1774,8 +1777,8 @@
         <!-- Spectacle 4: Mirath Atfal - Novembre 2025 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/petite prince.png" alt="Mirath Atfal" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/petite prince.png" alt="Mirath Atfal" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/petit prince@4x.png" alt="Mirath Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -1821,8 +1824,8 @@
         <!-- Spectacle 5: Simple comme bonjour - Décembre 2025 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/simple.png" alt="Simple comme bonjour" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/simple.png" alt="Simple comme bonjour" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/simple comme bonjour@4x.png" alt="Simple Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -1868,8 +1871,8 @@
         <!-- Spectacle 6: Charlotte - Janvier 2026 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/charlotte@4x.png" alt="Charlotte Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -1915,8 +1918,8 @@
         <!-- Spectacle 7: Estevanico - Février 2026 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/estavine.png" alt="Estevanico" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/estavine.png" alt="Estevanico" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/estevanico@4x.png" alt="Estevanico Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -1962,8 +1965,8 @@
         <!-- Spectacle 8: L'enfant de l'arbre - Mars 2026 -->
         <div class="col-lg-6 col-md-12 spectacle-item" data-category="primaire">
           <div class="spectacle-card fade-in-up visible" style="background: white; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.1); overflow: hidden; height: 100%; display: flex; flex-direction: column; transition: transform 0.3s ease;">
-            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden;">
-              <img src="assets/img/spectacles/enfant de l'arbre.png" alt="L'enfant de l'arbre" style="width: 100%; height: 100%; object-fit: contain; background: #f8f9fa;">
+            <div class="spectacle-card__img" style="position: relative; height: 300px; overflow: hidden; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <img src="assets/img/spectacles/enfant de l'arbre.png" alt="L'enfant de l'arbre" style="width: 100%; height: 100%; object-fit: contain;">
               <img src="assets/img/spectacles elements/larbre@4x.png" alt="L'enfant Character" style="position: absolute; bottom: 10px; right: 10px; width: 160px; height: 160px; object-fit: contain;">
               <div class="spectacle-card__overlay" style="position: absolute; top: 20px; right: 20px;">
                 <div class="spectacle-card__status available" style="background: #BDCF00; color: white; padding: 8px 16px; border-radius: 25px; font-size: 13px; font-weight: 700;">Disponible</div>
@@ -2487,6 +2490,15 @@
                 } else {
                     console.error('Auth manager not available');
                 }
+            });
+        }
+
+        // Individual login button
+        const individualLoginBtn = document.getElementById('individualLoginBtn');
+        if (individualLoginBtn) {
+            individualLoginBtn.addEventListener('click', () => {
+                // Open login modal for individuals
+                window.open('https://hello-planet-app.vercel.app/', '_blank');
             });
         }
 
